--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="grid-container">
-            <div class="logo">The Cigar Factory Lounge</div>
+            <div class="logo"><img src="assets/images/logo.png" alt=""></div>
             <nav class="menu">
                 <button class="menu-button" onclick="toggleMenu()">Menu</button>
                 <ul class="menu-items">
@@ -29,16 +29,17 @@
         <section class="grid-container">
             <div class="animation-section">ONLINE STORE COMING SOON!!!!</div>
             <div class="slideshow-section">
-                <!-- Slideshow content here -->
+                <img src="assets/images/accWall.jpg" alt="Cigar accessories">
+                <img src="assets/images/backLounge.jpg" alt="Cigar Lounge">
+                <img src="assets/images/backLounge2.jpg" alt="cigar lounge interior">
+                <img src="assets/images/event.jpg" alt="cigar lounge event">
+                <img src="assets/images/event2.jpg" alt="people at a cigr event">
             </div>
             <div class="description-section">
                 <p>Description paragraph with opaque background</p>
             </div>
         </section>
     </main>
-
-    <!-- Additional sections and content as needed -->
-
 </body>
 
 </html>
