--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- ... (unchanged) -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="../script.js"></script>
+    <title>Document</title>
 </head>
 <body>
     <!-- Top Navigation Bar -->
@@ -46,5 +49,6 @@
     </nav>
 
     <!-- JavaScript inclusion remains the same -->
+    <script src="../script.js"></script>
 </body>
 </html>
