--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script defer src="script.js"></script>
   <title>The Cigar Factory Lounge</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <div class="wrapper">
+<div class="grid-container">
 <!-- First Block -->
-<div class="wrapper-grid-container first-black">
+<div class="grid-item first-block">
+
   <div class="logo">LOGO</div>
   <div class="menu-button">MENU</div>
 </div>
 
 <!-- Second Block -->
-<div class="wrapper-grid-container second-black">
+<div class="grid-item second-black">
   <div class="slideshow-container">
     <div class="slideshow-section">
       <!-- Images for slideshow -->
@@ -32,7 +35,7 @@
 </div>
 
 <!-- Third Block -->
-<div class="wrapper-grid-container third-black">
+<div class="grid-container third-black">
   <div class="animation-section">ONLINE CIGAR STORE COMING SOON!!!!</div>
 </div>
 
@@ -40,13 +43,13 @@
 <div class="wrapper-grid-container fourth-black"></div>
 
 <!-- Fifth Block -->
-<div class="wrapper-grid-container fifth-black">
+<div class="grid-item fifth-black">
   <div class="map-section">
     <p>Address: 2804 E. Los Angeles Ave., Simi Valley, CA, 93063</p>
     <!-- Add map here if needed -->
-  </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3297.125312208847!2d-118.744006423279!3d34.27085657307545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e8291fa3d74671%3A0x34be3131bfadc463!2s2804%20E%20Los%20Angeles%20Ave%2C%20Simi%20Valley%2C%20CA%2093065!5e0!3m2!1sen!2sus!4v1705084735324!5m2!1sen!2sus" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
-
-<script src="script.js"></script>
+</div>
+</div>
 </body>
 </html>
